FIX: z-index style

--- a/src/Twitter/Advertisement/Advertisement.css
+++ b/src/Twitter/Advertisement/Advertisement.css
@@ -97,7 +97,7 @@
   transform: rotate(45deg);
   left: 12px;
   top: -5px;
-  z-index: 0;
+  z-index: -1;
 }
 .adContent {
   border-radius: 10px;
